# audio-stream-server

./: .coverage  .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CI_SETUP.md  CLAUDE.md  CONTRIBUTING.md  IMPROVEMENTS_COMPLETED.md  LINTING.md  README.md  TESTING.md  audio-stream.service  background_tasks.py  cache_service.py  check_queue_schema.py  config.py  database_service.py  deploy.sh  generate_version.py  lint.sh  list_elevenlabs_voices.py  main.py  migrate_add_audio_duration.py  migrate_add_llm_stats.py  migrate_add_metadata.py  migrate_add_queue_columns.py  migrate_add_weekly_summary.py  migrate_add_weekly_summary_runs.py  migrate_database.py  pyproject.toml  pytest.ini  run_tests.sh  setup.sh  summarization_service.py  test-ci-locally.sh  test_trilium.py  transcription_service.py  trilium_service.py  (+2 more)
.claude/rules/: http-docs-update.md  python-code.md  readme-update.md
.github/workflows/: COVERAGE_BADGE.md  README.md  ci.yml  coverage-badge.yml  test.yml
docs/: http_requests.md
routes/: __init__.py  admin.py  queue.py  stream.py  transcription.py  weekly_summaries.py
services/: __init__.py  api_clients.py  audio_prefetch.py  background_tasks.py  book_suggestions.py  broadcast.py  cache.py  database.py  llm_clients.py  llm_fallback.py  models.py  path_utils.py  scheduler.py  streaming.py  summarization.py  transcription.py  trilium.py  tts.py  weekly_summary.py  youtube.py
static/: app.js  client-audio-cache.js  client-cache-db.js  service-worker.js  style.css  update-checker.js
templates/: index.html  stats.html
tests/: JAVASCRIPT_TESTING.md  __init__.py  conftest.py  test_config_parsing.py  test_generate_version.py  test_summary_queue_integration.py
tests/integration/routes/: test_queue_types.py  test_stream.py  test_weekly_summaries.py
tests/integration/services/: test_database.py  test_generate_version.py
tests/routes/: test_admin.py  test_queue.py  test_stream.py  test_transcription.py  test_weekly_summaries.py
tests/services/: test_background_tasks.py  test_book_suggestions.py  test_broadcast.py  test_cache.py  test_cache_concurrency.py  test_database.py  test_scheduler.py  test_streaming.py  test_summarization.py  test_transcription.py  test_trilium.py  test_tts.py  test_weekly_summary.py  test_youtube.py
tests/unit/: test_main_urls.py
tests/unit/routes/: test_admin.py  test_queue.py  test_queue_types.py  test_stream.py  test_transcription.py
tests/unit/services/: test_api_clients.py  test_audio_prefetch.py  test_book_suggestions.py  test_config_parsing.py  test_generate_version.py  test_llm_clients.py  test_scheduler.py  test_streaming.py  test_summarization.py  test_transcription.py  test_trilium.py  test_tts.py  test_weekly_summary.py
