[project]
name = "audio-stream-server"
version = "0.1.0"
description = "Stream MP3 from Youtube videos over HTTP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "jinja2",
    "openai>=1.0.0",
    "google-genai",
    "httpx",
    "python-dotenv",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]
